--- a/notebooks/unit1/dummy_agent_library.ipynb
+++ b/notebooks/unit1/dummy_agent_library.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "5af6ec14-bb7d-49a4-b911-0cf0ec084df5",
    "metadata": {
     "id": "5af6ec14-bb7d-49a4-b911-0cf0ec084df5",
@@ -58,14 +58,23 @@
    "source": [
     "import os\n",
     "from huggingface_hub import InferenceClient\n",
+    "from dotenv import load_dotenv\n",
     "\n",
-    "os.environ[\"HF_TOKEN\"]=\"\"\n",
-    "client = InferenceClient(\"meta-llama/Llama-3.2-3B-Instruct\")\n"
+    "load_dotenv()\n",
+    "\n",
+    "# HF_TOKEN aus Umgebungsvariablen holen\n",
+    "hf_token = os.getenv(\"HF_TOKEN\")\n",
+    "\n",
+    "# Client mit dem Token initialisieren\n",
+    "client = InferenceClient(\"meta-llama/Llama-3.2-3B-Instruct\", token=hf_token)\n",
+    "\n",
+    "#os.environ[\"HF_TOKEN\"]=\"\"\n",
+    "#client = InferenceClient(\"meta-llama/Llama-3.2-3B-Instruct\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "c918666c-48ed-4d6d-ab91-c6ec3892d858",
    "metadata": {
     "colab": {
